# docslice

./: .gitignore  CLAUDE.md  PRD.md  README.md  claude_sug.md  codex_sug.md  pyproject.toml  tech_spec.md
.claude/: settings.local.json
src/docslice/: __init__.py  cli.py  converter.py  extractor.py  fetcher.py  generator.py  models.py  parser.py  presets.py  utils.py
tests/: test_cli.py  test_converter.py  test_extractor.py  test_fetcher.py  test_generator.py  test_models.py  test_parser.py  test_presets.py  test_utils.py
